# loginsystem-fastapi

./: .gitignore  Makefile  docker-compose.yml  make_env.py  pyproject.toml
app/: __main__.py
app/routes/: LoginSystem.py  __init__.py
app/templates/: login.html
backend/: .dockerignore  .env-sample  Dockerfile  Makefile  pyproject.toml
backend/app/: __main__.py
backend/app/config/: __init__.py  default.py  utils.py
backend/app/db/: __init__.py  alembic.ini  database.py
backend/app/db/connection/: __init__.py  session.py
backend/app/db/dal/: userdal.py
backend/app/db/migrator/: env.py
backend/app/db/models/: login_models.py
backend/app/routers/: __init__.py  login_router.py  login_schemas.py  login_utils.py
backend/app/routes/: __init__.py  loginsystem.py
backend/app/schemas/: login_schema.py  login_schemas.py  loginform.py
backend/app/static/css/: login.css
backend/app/static/js/: login.js  signin.js  user.js
backend/app/templates/: login.html  signin.html  user.html
backend/app/utils/: login_utils.py
